--- a/index.html
+++ b/index.html
@@ -2,35 +2,74 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Sound</title>
+    <title>Logo</title>
+
     <style>
-        body {
+        /* Убираем стандартный мусор браузера */
+        * {
             margin: 0;
-            background: black;
-            color: white;
-            height: 100vh;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Весь экран */
+        html, body {
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Кнопка на весь экран */
+        body {
+            background: #000;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-family: Arial;
+            cursor: pointer;
+            user-select: none;
         }
-        a {
-            color: #aaa;
-            text-decoration: none;
-            margin-top: 20px;
+
+        /* Логотип */
+        img {
+            width: 200px;
+            opacity: 0.9;
+            transition: opacity 0.3s ease;
+            pointer-events: none; 
+            /* важно: чтобы клик проходил сквозь картинку */
+        }
+
+        body:hover img {
+            opacity: 1;
         }
     </style>
 </head>
 <body>
 
-<audio id="player" src="zvuk-domofona.mp3" loop></audio>
+    <!-- Логотип -->
+    <img src="logo.png" alt="Logo">
 
-<button onclick="document.getElementById('player').play()">
-    ▶ PLAY
-</button>
+    <!-- Звук -->
+    <audio id="audio" src="zvuk-domofona.mp3"></audio>
 
-<a href="https://t.me/username">Контакты</a>
+    <script>
+        // Флаг, чтобы клик сработал только один раз
+        let activated = false;
+
+        // Ловим клик ВЕЗДЕ
+        document.body.addEventListener("click", () => {
+            if (activated) return;
+            activated = true;
+
+            const audio = document.getElementById("audio");
+
+            // Запуск звука
+            audio.play();
+
+            // Переход по ссылке
+            setTimeout(() => {
+                window.location.href = "https://t.me/ananasQj";
+            }, 200);
+        });
+    </script>
 
 </body>
 </html>
