--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
 
     <!-- Логотип -->
-    <img src="Grimnas" alt="Logo">
+    <img src="Grimnas.png" alt="Logo">
 
     <!-- Звук -->
     <audio id="audio" src="zvuk-domofona.mp3"></audio>
