--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         }
 
         svg {
-            width: 100%;
-            height: 100%;
-            opacity: 0.9;
+            width: 50%;
+            height: 50%;
+            opacity: 1;
         }
 
         body:hover svg {
@@ -66,7 +66,7 @@
             audio.play();
 
             setTimeout(() => {
-                window.location.href = "https://t.me/username";
+                window.location.href = "https://t.me/ananasQj";
             }, 200);
         });
     </script>
