--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <!-- Звук -->
-    <audio id="audio" src="sound.mp3"></audio>
+    <audio src="song.mp3" id="audio" autoplay="autoplay" loop="loop" crossorigin="anonymous"></audio>
 
     <script>
         let activated = false;
