--- a/index.html
+++ b/index.html
@@ -53,7 +53,31 @@
     </div>
 
     <!-- Звук -->
-    <audio id="audio" src="sound.mp3"></audio>
+    <audio id="audio" preload="auto">
+    <source src="sound.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+    const audio = document.getElementById("audio");
+    audio.load();
+
+    let activated = false;
+
+    document.body.addEventListener("click", async () => {
+        if (activated) return;
+        activated = true;
+
+        try {
+            await audio.play();
+        } catch (e) {}
+
+        setTimeout(() => {
+            window.location.href = "https://t.me/ananasQj";
+        }, 800); // оптимум
+    });
+</script>
+
+
 
     <script>
         let activated = false;
